src-tauri/check_errors2.txt
    Checking nextorrent v0.1.0 (/Volumes/Data/_workspace/_desktop/tozrt/src-tauri)
warning: unused import: `AppHandle`
 --> src/lib.rs:6:13
  |
6 | use tauri::{AppHandle, Manager, Emitter};
  |             ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src/torrent.rs:156:21
    |
156 |                 id: i,
    |                     ^ expected `u32`, found `u64`

error[E0599]: no method named `info` found for reference `&ManagedTorrentShared` in the current scope
   --> src/torrent.rs:297:44
    |
297 |                 let info = handle.shared().info();
    |                                            ^^^^
    |
help: there is a method `into` with a similar name
    |
297 -                 let info = handle.shared().info();
297 +                 let info = handle.shared().into();
    |

error[E0282]: type annotations needed
   --> src/torrent.rs:301:44
    |
301 | ...name().map(|n| n.to_string()).unwrap_or_else(|| "Unknown".to_...
    |                ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
301 |                     name: info.name().map(|n: /* Type */| n.to_string()).unwrap_or_else(|| "Unknown".to_string()),
    |                                             ++++++++++++

error[E0599]: `librqbit_core::hash_id::Id<20>` doesn't implement `std::fmt::Display`
   --> src/torrent.rs:302:51
    |
302 |                     info_hash: handle.info_hash().to_string(),
    |                                                   ^^^^^^^^^
    |
   ::: /Users/baemon/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/librqbit-core-5.0.0/src/hash_id.rs:6:1
    |
  6 | pub struct Id<const N: usize>(pub [u8; N]);
    | ----------------------------- doesn't satisfy `librqbit_core::hash_id::Id<20>: ToString` or `librqbit_core::hash_id::Id<20>: std::fmt::Display`
    |
    = note: the following trait bounds were not satisfied:
            `librqbit_core::hash_id::Id<20>: std::fmt::Display`
            which is required by `librqbit_core::hash_id::Id<20>: ToString`

error[E0624]: method `pause` is private
   --> src/torrent.rs:363:20
    |
363 |             handle.pause();
    |                    ^^^^^ private method
    |
   ::: /Users/baemon/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/librqbit-8.1.1/src/torrent_state/mod.rs:426:5
    |
426 |     pub(crate) fn pause(&self) -> anyhow::Result<()> {
    |     ------------------------------------------------ private method defined here

error[E0599]: no method named `resume` found for struct `Arc<ManagedTorrent>` in the current scope
   --> src/torrent.rs:372:20
    |
372 |             handle.resume();
    |                    ^^^^^^ method not found in `Arc<ManagedTorrent>`

warning: unused import: `Manager`
 --> src/lib.rs:6:24
  |
6 | use tauri::{AppHandle, Manager, Emitter};
  |                        ^^^^^^^

Some errors have detailed explanations: E0282, E0308, E0599, E0624.
For more information about an error, try `rustc --explain E0282`.
warning: `nextorrent` (lib) generated 2 warnings
error: could not compile `nextorrent` (lib) due to 6 previous errors; 2 warnings emitted
